--- a/food-crossroads/src/css/index.css
+++ b/food-crossroads/src/css/index.css
@@ -1,6 +1,5 @@
 /* 首頁 start */
 
-
 /* 搜尋欄 start */
 
 #search_box {
@@ -12,38 +11,37 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    font-size: 20px;
 }
 
-.search_div {
+#search_box .search_div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* text-align: center; */
 }
 
-.search_mobile_div,
-.mobile_div {
+#search_box .search_mobile_div,
+#search_box .mobile_div {
     display: none;
 }
 
 
 /* 搜尋關鍵字 start */
 
-.search_keyword {
-    width: 600px;
-    height: 50px;
-    margin-right: 20px;
+#search_box .search_keyword {
+    width: 700px;
+    height: 60px;
     margin-bottom: 20px;
     border-radius: 5px;
     background-color: white;
     border: none;
 }
 
-.search_keyword:hover {
+#search_box .search_keyword:hover {
     box-shadow: 0 1px 10px 2px #999999;
 }
 
-.search_keyword:focus {
+#search_box .search_keyword:focus {
     outline: none;
     box-shadow: 0 1px 10px 2px #888888;
 }
@@ -54,15 +52,15 @@
 
 /* 搜尋地區 start */
 
-.area_btn {
+#search_box .area_btn {
     display: none;
 }
 
-.area_label {
+#search_box .area_label {
     position: relative;
-    width: 600px;
-    height: 50px;
-    line-height: 50px;
+    width: 700px;
+    height: 60px;
+    line-height: 60px;
     background-color: white;
     color: #403C3C;
     text-align: start;
@@ -70,14 +68,14 @@
     border-radius: 5px;
 }
 
-.area_label .fa-map-marker-alt {
+#search_box .area_label .fa-map-marker-alt {
     color: #403C3C;
     padding: 10px;
 }
 
-.area_label .fa-sort-down {
+#search_box .area_label .fa-sort-down {
     color: #403C3C;
-    margin-left: 75.4%;
+    margin-left: 74.4%;
 }
 
 
@@ -85,73 +83,72 @@
     display: block;
 } */
 
-.area_label:hover {
+#search_box .area_label:hover {
     box-shadow: 0 1px 10px 2px #999999;
     color: black;
 }
 
-.area_btn:checked+.area_label {
+#search_box .area_btn:checked+.area_label {
     box-shadow: 0 1px 10px 2px #888888;
 }
 
-.tab_div {
+#search_box .tab_div {
     background-color: white;
     text-align: center;
     margin-top: -8px;
     padding-top: 15px;
     z-index: 2;
-    width: 600px;
+    width: 700px;
     display: none;
     border-radius: 0 0 5px 5px;
 }
 
-.tab_css {
+#search_box .tab_css {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.tab_css input {
+#search_box .tab_css input {
     display: none;
 }
 
-.tab_css label {
+#search_box .tab_css label {
     margin: 0 5px 5px 0;
     padding: 10px 16px;
     cursor: pointer;
     border-radius: 5px;
     background: #8B1309;
-    color: rgb(255, 255, 255);
+    color: #fff;
     opacity: 0.5;
 }
 
-.tab_content {
+#search_box .tab_content {
     order: 1;
     display: none;
     width: 100%;
     line-height: 1.6;
-    font-size: 16px;
+    font-size: 18px;
     padding: 15px;
     border: 1px solid rgb(226, 225, 225);
 }
 
-.tab_content span {
-    font-size: 16px;
+#search_box .tab_content span {
     margin-left: 10px;
     cursor: pointer;
 }
 
-.tab_css input:checked+label,
-.tab_css label:hover {
+#search_box .tab_css input:checked+label,
+#search_box .tab_css label:hover {
     opacity: 1;
     font-weight: bold;
 }
 
-.tab_css input:checked+label+.tab_content {
+#search_box .tab_css input:checked+#search_box label+#search_box .tab_content {
     display: initial;
 }
 
-.tab_close {
+#search_box .tab_close {
     padding: 10px;
 }
 
@@ -161,15 +158,15 @@
 
 /* 進階搜尋 start */
 
-.other_btn {
+#search_box .other_btn {
     display: none;
 }
 
-.other_label {
+#search_box .other_label {
     position: relative;
-    width: 600px;
-    height: 50px;
-    line-height: 50px;
+    width: 700px;
+    height: 60px;
+    line-height: 60px;
     background-color: #FCC106;
     color: #403C3C;
     text-align: start;
@@ -177,26 +174,26 @@
     border-radius: 5px;
 }
 
-.other_label:hover {
+#search_box .other_label:hover {
     box-shadow: 0 1px 10px 2px #999999;
     color: black;
 }
 
-.other_label .fa-hand-point-up {
+#search_box .other_label .fa-hand-point-up {
     color: #403C3C;
     padding: 10px;
 }
 
-.other_label .fa-sort-down {
+#search_box .other_label .fa-sort-down {
     color: #403C3C;
-    margin-left: 78%;
+    margin-left: 77.4%;
 }
 
-.chk_div {
+#search_box .chk_div {
     background-color: #FCC106;
     margin-top: -8px;
     z-index: 1;
-    width: 600px;
+    width: 700px;
     border-radius: 0 0 5px 5px;
     display: none;
     text-align: center;
@@ -207,25 +204,27 @@
     display: block;
 } */
 
-.other_btn:checked+.other_label {
+#search_box .other_btn:checked+#search_box .other_label {
     box-shadow: 0 1px 10px 2px #888888;
 }
 
-.chk_css {
-    padding: 20px 25px 10px 25px;
+#search_box .chk_css {
+    padding: 20px 15px 10px 15px;
 }
 
-.chk_item {
+#search_box .chk_item {
     display: inline;
-    padding: 5px 10px;
+    padding: 5px 15px;
+
 }
 
-.chk_chk {
+#search_box .chk_chk {
     width: 16px;
     height: 16px;
+    margin-right: 5px;
 }
 
-.chk_close {
+#search_box .chk_close {
     padding: 10px;
 }
 
@@ -235,18 +234,18 @@
 
 /* 搜尋鈕 start */
 
-.search_btn {
+#search_box .search_btn {
     background-color: #8B1309;
     color: white;
     border-radius: 5px;
     border: none;
     margin-top: 20px;
-    height: 40px;
+    height: 50px;
     width: 350px;
     transition: 0.3s;
 }
 
-.search_btn:hover {
+#search_box .search_btn:hover {
     background-color: #a30f01;
 }
 
@@ -259,13 +258,12 @@
 .kind_div {
     margin-left: 10%;
     margin-right: 10%;
-    margin-bottom: 5%;
 }
 
 .kind_div h3 {
     padding: 50px;
     font-size: 42px;
-    font-weight: 500;
+    font-weight: 600;
     text-align: center;
 }
 
@@ -275,14 +273,14 @@
 }
 
 .kind_span {
+    display: flex;
     margin-right: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 15%;
 }
 
 .index_img {
     width: 100%;
     position: relative;
-    overflow: hidden;
     border-radius: 5px;
 }
 
@@ -290,13 +288,7 @@
     width: 100%;
     height: 300px;
     border-radius: 5px;
-    transform: scale(1, 1);
-    transition: all 1s ease-out;
     object-fit: cover
-}
-
-.index_img img:hover {
-    transform: scale(1.2, 1.2);
 }
 
 .kind_span span:hover {
@@ -305,11 +297,36 @@
 
 .kind_span span {
     position: absolute;
-    left: 10%;
-    top: 40%;
-    font-size: 55px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: unset;
+    font-size: 48px;
     z-index: 1;
     color: white;
+}
+
+/* 置頂紐 */
+.ontop_btn {     
+    width: 60px;     
+    height: 60px;     
+    border: none;     
+    border-radius: 50%;     
+    color: #fff;     
+    font-size: 1.75rem;     
+    background-color: #403C3C;     
+    position: fixed;     
+    bottom: 10%;     
+    right: 5%;     
+    transition: 0.3s;      
+    }  
+
+.ontop_btn:hover {     
+    background-color: grey;     
 }
 
 
@@ -322,60 +339,64 @@
 /* 超大型螢幕 */
 
 @media screen and (max-width:1200px) {
-    .search_keyword {
+    #search_box .search_keyword {
         height: 40px;
         width: 500px;
     }
-    .area_label {
+    #search_box .area_label {
         height: 40px;
         line-height: 40px;
         width: 500px;
     }
-    .area_label .fa-sort-down {
+    #search_box .area_label .fa-sort-down {
         margin-left: 71%;
     }
-    .tab_div {
+    #search_box .tab_div {
         /* position: absolute;
         top: 100px;
         left: 330px; */
         width: 500px;
     }
-    .other_label {
+    #search_box .other_label {
         height: 40px;
         line-height: 40px;
         width: 500px;
     }
-    .other_label .fa-sort-down {
+    #search_box .other_label .fa-sort-down {
         margin-left: 74%;
     }
-    .chk_div {
+    #search_box .chk_div {
         /* position: absolute;
         top: 180px;
         left: 230px; */
         width: 500px;
     }
-    .chk_css{
+    #search_box .chk_css {
         padding: 10px 10px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
     }
-    .chk_item {
+    #search_box .chk_item {
         padding: 5px 10px 5px 10px;
         font-size: 1.3vw;
     }
-    .tab_close,
-    .chk_close {
+    #search_box .tab_close,
+    #search_box .chk_close {
         font-size: 14px;
     }
-    .search_btn {
+    #search_box .search_btn {
+        height: 40px;
         width: 300px;
     }
+    .kind_span {
+        margin-bottom: 25%;
+    }
+    .index_img img {
+        height: 200px;
+    }
     .kind_span span {
-        position: absolute;
-        left: 18%;
-        top: 35%;
-        font-size: 55px;
+        font-size: 36px;
     }
 }
 
@@ -386,47 +407,44 @@
     #search_box {
         height: 60vh;
     }
-    .search_keyword {
+    #search_box .search_keyword {
         width: 450px;
     }
-    .area_label {
+    #search_box .area_label {
         width: 450px;
     }
-    .area_label .fa-sort-down {
+    #search_box .area_label .fa-sort-down {
         margin-left: 68%;
     }
-    .tab_div {
+    #search_box .tab_div {
         width: 450px;
     }
-    .other_label {
+    #search_box .other_label {
         width: 450px;
     }
-    .other_label .fa-sort-down {
+    #search_box .other_label .fa-sort-down {
         margin-left: 71.5%;
     }
-    .chk_div {
+    #search_box .chk_div {
         width: 450px;
     }
-    .chk_css{
+    #search_box .chk_css {
         padding: 5px 5px 0px 5px;
     }
-    .chk_item {
+    #search_box .chk_item {
         padding: 5px;
     }
-    .search_btn {
-        margin-right: 20px;
+    #search_box .search_btn {
         width: 450px;
     }
     .kind_span {
-        width: 100%;
-        height: 40%;
-        margin-bottom: 5%;
+        margin-bottom: 25%;
+    }
+    .index_img img {
+        height: 180px;
     }
     .kind_span span {
-        position: absolute;
-        left: 22.5%;
-        top: 40%;
-        font-size: 72px;
+        font-size: 24px;
     }
 }
 
@@ -437,32 +455,32 @@
     #search_box {
         height: 70vh;
     }
-    .search_div {
+    #search_box .search_div {
         display: none;
     }
-    .search_mobile_div {
+    #search_box .search_mobile_div {
         all: unset;
         display: flex;
         justify-content: center;
         width: 100%;
     }
-    .search_mobile_inline_div {
+    #search_box .search_mobile_inline_div {
         background-color: #fff;
         width: 75%;
         height: 40px;
         border-radius: 5px;
         cursor: pointer;
     }
-    .search_icon {
+    #search_box .search_icon {
         margin-left: 20px;
         font-size: 25px;
     }
-    .search_label {
+    #search_box .search_label {
         margin-left: 20px;
         font-size: 20px;
         line-height: 40px;
     }
-    .mobile_div {
+    #search_box .mobile_div {
         font-size: 3vw;
         position: fixed;
         top: 0;
@@ -472,79 +490,80 @@
         z-index: 999;
         background-color: #fff;
     }
-    .turn_off {
+    #search_box .turn_off {
         background-color: rgb(236, 236, 236);
         font-size: 4vw;
     }
-    .mobile_inline_div {
+    #search_box .mobile_inline_div {
         padding: 20px 50px 50px 50px;
         background-color: rgb(236, 236, 236);
     }
-    .search_keyword {
+    #search_box .search_keyword {
         width: 100%;
     }
-    .area_label {
+    #search_box .area_label {
         width: 100%;
         margin-bottom: 20px;
     }
-    .area_label .fa-sort-down {
+    #search_box .area_label .fa-sort-down {
         display: none;
     }
-    .mobile_tab_div {
+    #search_box .mobile_tab_div {
         width: 100%;
         margin-left: 70px;
         margin-top: 30px;
         display: none;
     }
-    .mobile_tab_css label {
+    #search_box .mobile_tab_css label {
         font-size: 2.6vw;
         width: 80%;
         border-bottom: 1.5px solid #d1d1d1;
         display: block;
     }
-    .mobile_tab_content {
+    #search_box .mobile_tab_content {
         display: none;
     }
-    .mobile_tab_content span {
+    #search_box .mobile_tab_content span {
         display: block;
         width: 80%;
         border-bottom: 1px solid rgb(224, 224, 224);
         font-size: 2.3vw;
         margin-bottom: 10px;
     }
-    .other_label {
+    #search_box .other_label {
         width: 49%;
         margin-right: 2%;
         margin-bottom: 20px;
         float: left;
         z-index: 1000;
     }
-    .other_label .fa-sort-down {
+    #search_box .other_label .fa-sort-down {
         display: none;
     }
-    .mobile_chk_css {
+    #search_box .mobile_chk_css {
         width: 40%;
         float: left;
         margin: 10px;
     }
-    .mobile_chk_item {
+    #search_box .mobile_chk_item {
         font-size: 2.5vw;
         margin-right: 50px;
     }
-    .search_btn {
+    #search_box .search_btn {
         margin-top: 0px;
         width: 49%;
     }
+    .water_fall {
+        column-count: 2;
+    }
     .kind_span {
-        width: 100%;
-        height: 45%;
-        margin-bottom: 5%;
+        margin-bottom: 10%;
+    }
+    .index_img img {
+        height: 250px;
     }
     .kind_span span {
-        position: absolute;
-        left: 22.5%;
-        top: 40%;
-        font-size: 54px;
+        font-size: 36px;
     }
 }
 
@@ -555,24 +574,51 @@
     #search_box {
         height: 60vh;
     }
-    .other_label {
+    #search_box .other_label {
         width: 100%;
     }
-    .mobile_tab_div {
+    #search_box .mobile_tab_div {
         margin-left: 50px;
     }
-    .mobile_chk_item {
+    #search_box .mobile_chk_item {
         margin-right: -10px;
     }
-    .search_btn {
+    #search_box .search_btn {
         width: 100%;
     }
+    .index_img img {
+        height: 200px;
+    }
+    .kind_span span {
+        font-size: 24px;
+    }
+    .ontop_btn {     
+        width: 40px;     
+        height: 40px;       
+        bottom: 10%;     
+        right: 5%;     
+        transition: 0.3s;      
+    }  
 }
 
 
 /* 小手機 */
 
-@media screen and (max-width:480px) {}
+@media screen and (max-width:480px) {
+    .kind_div h3 {
+        font-size: 24px;
+    }
+    .index_img img {
+        height: 150px;
+    }
+    .kind_span span {
+        font-size: 24px;
+    }
+    .ontop_btn {     
+        bottom: 10%;     
+        right: 3%;     
+    }  
+}
 
 
 /* RWD end */
