--- a/food-crossroads/src/css/member_login.css
+++ b/food-crossroads/src/css/member_login.css
@@ -8,10 +8,9 @@
 }
 
 /* ---------- body start ---------- */
-
 .member_login_container {
     width: 440px;
-    height: 60vh;
+    height: 58vh;
     margin: 120px auto;
     padding: 10px 10px;
     display: flex;
@@ -80,9 +79,44 @@
     justify-content: space-around;
 }
 
+.forgot a{
+    text-decoration: none;
+    font-size: 16px;
+    position: relative;
+    right: 28px;
+}
+
+.forgot input {
+    position: relative;
+    left: 28px;
+}
+
+.forgot span {
+    font-size: 16px;
+    position: relative;
+    bottom: 4px;
+    left: 30px;
+}
+
 #automatically_login {
     width: 20px;
     height: 20px;
+}
+
+.reportSpan1 {
+    background-color: palegoldenrod;
+    position: relative;
+    top: 230px;
+    right: 285px;
+    height: 5vh;
+}
+
+.reportSpan2 {
+    background-color: palegreen;
+    position: relative;
+    top: 300px;
+    right: 350px;
+    height: 5vh;
 }
 
 /* ---------- body over ---------- */
