餐廳列表串接

--- a/food-crossroads/src/css/index.css
+++ b/food-crossroads/src/css/index.css
@@ -144,7 +144,7 @@
     font-weight: bold;
 }
 
-#search_box .tab_css input:checked+#search_box label+#search_box .tab_content {
+#search_box .tab_css input:checked+label+.tab_content {
     display: initial;
 }
 
