--- a/food-crossroads/src/css/member_register.css
+++ b/food-crossroads/src/css/member_register.css
@@ -6,18 +6,20 @@
 .register_title {
     display: flex;
     justify-content: center; 
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+    margin-right: 30px;
 }
 
 .register_title_text {
     font-size: 30px;
-    font-weight: 600px;
+    font-weight: 600;
 }
 
 .register_form {
+    background-color: palegoldenrod;
     display: flex;
     justify-content: center; 
-    align-items: center;
+    margin-top: 40px;
 }
 
 .input_box {
@@ -27,6 +29,7 @@
 
 .form_text {
     font-size: 20px;
+    font-weight: 600;
     letter-spacing: 15px;
 }
 
@@ -38,6 +41,7 @@
 .btn_div{
     display: flex;
     justify-content: center;
+    margin-right: 80px;
 }
 
 .register_btn {
@@ -49,10 +53,18 @@
     width: 150px;
     margin-top: 50px;
     transition: 0.3s;
+    font-weight: 600;
 }
 
 .register_btn:hover{
-    background-color: #a30f01;
+    background-color: #f14030;
+}
+
+.reportSpan {
+    width: 140px;
+    text-align: center;
+    margin-top: 140px;
+    margin-right: 63px;
 }
 
 /* RWD */
