--- a/index_list/css/orderpage.css
+++ b/index_list/css/orderpage.css
@@ -1,5 +1,16 @@
 
 /* 分類列表 */
+.scroll {
+    white-space: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+.scroll::-webkit-scrollbar {
+    display: none;
+}
+
 .menu_group{
     margin: 0 0 1vw 0;
     height: 75px;
@@ -10,7 +21,7 @@
 
 #menu_group{
     padding-top: 10px;
-    margin-left: 10vw;
+    margin-left: 2vw;
     margin-right: 3vw;
 }
 
@@ -20,7 +31,7 @@
     margin: 8px 0 10px 0;
     height: 40px;
     width: 9vw;
-    font-size: 12pt;
+    font-size: 16pt;
     border: 1px solid #FCC106;
     color: #403C3C;
     transition: 0.3s;
@@ -35,9 +46,7 @@
     color: white;
 }
 
-#group_1{
-    margin-top: 15px;
-}
+
 
 /* 按鈕圓角 */
 .oval{
@@ -47,6 +56,10 @@
 /* 分類標題 */
 .food_title{
 margin-left: 10vw;
+}
+
+#group_1{
+    margin-top: 15px;
 }
 
 /* 商品框*/
@@ -87,9 +100,10 @@ div.food_list_border2{
 
 /* 加入購物車按鈕 */
 .btn_add_cart{
-    font-size: 12pt;
+    font-size: 14pt;
     border-radius: 0 0 9px 9px;
     width: 100%;
+    height: 35px;
     background-color: #403C3C;
     color: white;
     transition: 0.3s;
@@ -98,7 +112,6 @@ div.food_list_border2{
 .btn_add_cart:hover{
     background-color: brown;
 }
-
 
 
 /* 商品數量 */
@@ -173,6 +186,45 @@ div.food_list_border2{
     background-color: #FCC106;
     color: black;
     
+}
+
+
+/* modal */
+.btn_cancel{
+    background-color: rgb(203, 200, 200);
+    color: #fff;
+    font-size: 16px;
+    border-radius: 10px;
+    width: 80px;
+    height: 40px;
+}
+
+.btn_cancel:hover, .btn_yes:hover{
+    background-color: #FCC106;
+    color: #403C3C;
+}
+
+.btn_yes{
+    background-color: #8B1309;
+    color: #fff;
+    font-size: 16px;
+    border-radius: 10px;
+    width: 80px;
+    height: 40px;
+}
+
+
+#copyinput{
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.btn_copy{
+    font-size: 16px;
+    background-color: #8B1309;
+    color: #fff;
+    width: 100%;
+    height: 40px;
 }
 
 /* 置頂紐 */
@@ -314,7 +366,7 @@ tbody td:nth-child(5) {
 @media screen and (max-width:1000px) {
         .menu_group_list{
             width: 15vw;
-            font-size: 11pt;
+            font-size: 14pt;
         }
     
     .menu_group{
@@ -353,7 +405,7 @@ tbody td:nth-child(5) {
 @media screen and (max-width:576px) {
     .menu_group_list{
         width: 20vw;
-        font-size: 11pt;
+        font-size: 12pt;
     }
 
     div.food_list_border{
