--- a/food-crossroads/src/css/restaurant_login.css
+++ b/food-crossroads/src/css/restaurant_login.css
@@ -76,6 +76,13 @@
   left: 30px;
 }
 
+.reportSpan {
+  height: 5vh;
+  color: red;
+  margin-top: -75px;
+  margin-right: -230px;
+}
+
 /* ---------- body over ---------- */
 
 
