--- a/index_list/css/orderpage.css
+++ b/index_list/css/orderpage.css
@@ -156,7 +156,7 @@ div.food_list_border2{
     color: white;
     height: 40px;
     width: 100px;
-    font-size: 1vw;
+    font-size: 16pt;
     border: 0;
 }
 
@@ -176,7 +176,7 @@ div.food_list_border2{
     background-color: #8B1309;
     border: 0;
     color: white;
-    font-size: 1vw;
+    font-size: 16pt;
     font-weight: bold;
     border-radius: 10px;
     transition: 0.3s;
@@ -238,8 +238,8 @@ div.food_list_border2{
     background-color: #403C3C;     
     /* box-shadow: inset -3px -3px 5px 0 black;      */
     position: fixed;     
-    bottom: 50px;     
-    left: 35%;     
+    bottom: 60px;     
+    left: 40%;     
     transition: 0.2s;    
     margin-top: 20px;     
     margin-left: 50%; 
