--- a/index_list/css/restaurant_self_pick_up.css
+++ b/index_list/css/restaurant_self_pick_up.css
@@ -6,6 +6,23 @@ aside {
     top: 12%;
 }
 
+.search {
+    padding: 10px 0px 5px 5px;
+    border-bottom: 1px solid white;
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.search input {
+    height: 4vh;
+    width: 160px;
+    position: absolute;
+    right: 13px;
+    top: 13px;
+    font-size: 14px;
+}
+
 .panel-default{
     /* border: 1px solid red; */
     border-bottom: 1px solid white;
@@ -40,15 +57,6 @@ aside {
     text-decoration: none;
     color: white;
     font-weight: 600;
-}
-
-.sreach_form {
-    /* border: 1px solid red; */
-    padding: 0 10px 5px 10px;
-}
-
-.form_textbox {
-    margin-bottom: -6px;
 }
 
 .container{
