--- a/food-crossroads/src/css/orderpage.css
+++ b/food-crossroads/src/css/orderpage.css
@@ -1,15 +1,31 @@
 
+.breaddiv{
+    margin-left: 2vw;
+}
+
 /* 分類列表 */
+.scroll {
+    white-space: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+.scroll::-webkit-scrollbar {
+    display: none;
+}
+
 .menu_group{
     margin: 0 0 1vw 0;
     height: 75px;
     width: 100%;
     background-color: #403C3C;
+    position: sticky;
 }
 
 #menu_group{
     padding-top: 10px;
-    margin-left: 10vw;
+    margin-left: 2vw;
     margin-right: 3vw;
 }
 
@@ -19,7 +35,7 @@
     margin: 8px 0 10px 0;
     height: 40px;
     width: 9vw;
-    font-size: 12pt;
+    font-size: 16pt;
     border: 1px solid #FCC106;
     color: #403C3C;
     transition: 0.3s;
@@ -29,9 +45,12 @@
     color: white;
 }
 
-#group_1{
-    margin-top: 15px;
+.menu_group_list:active{
+    background-color: #8B1309;
+    color: white;
 }
+
+
 
 /* 按鈕圓角 */
 .oval{
@@ -41,6 +60,10 @@
 /* 分類標題 */
 .food_title{
 margin-left: 10vw;
+}
+
+#group_1{
+    margin-top: 15px;
 }
 
 /* 商品框*/
@@ -55,20 +78,27 @@ div.food_list_border{
 div.food_list_border2{
     margin-left: 0vw;
 }
-
+.food_dollar_qty{
+    padding-top: 2rem;
+}
 .food_name{
-    font-size: 16pt;
+    font-size: 1.2rem;
+    margin-bottom: 1.8vw;
 }
 .food_detail{
     flex-wrap: nowrap;
     list-style-type: none; 
     margin-left: 20%;
 }
-
 .dollar{
     margin-right: 5%;
     font-size: 12pt;
 }
+#qty_number{
+    height: 35px;
+    margin: 0 5px;
+}
+
 
 .food_img{
     width: 150px;
@@ -79,9 +109,10 @@ div.food_list_border2{
 
 /* 加入購物車按鈕 */
 .btn_add_cart{
-    font-size: 10pt;
+    font-size: 14pt;
     border-radius: 0 0 9px 9px;
     width: 100%;
+    height: 35px;
     background-color: #403C3C;
     color: white;
     transition: 0.3s;
@@ -92,10 +123,8 @@ div.food_list_border2{
 }
 
 
-
 /* 商品數量 */
 .btn_count{
-    margin: 2% 1vw 0 1vw ;
     width: 30px;
     height: 30px;
     background-color: white;
@@ -107,7 +136,10 @@ div.food_list_border2{
     background-color: #8B1309;
     color: white;
 }
-
+#qty_number{
+    width: 4vw;
+    text-align:center
+}
 
 .food_list_detail{
     align-items: flex-start
@@ -133,7 +165,7 @@ div.food_list_border2{
     color: white;
     height: 40px;
     width: 100px;
-    font-size: 1vw;
+    font-size: 16pt;
     border: 0;
 }
 
@@ -153,11 +185,10 @@ div.food_list_border2{
     background-color: #8B1309;
     border: 0;
     color: white;
-    font-size: 1vw;
+    font-size: 16pt;
     font-weight: bold;
     border-radius: 10px;
     transition: 0.3s;
-
 }
 
 #checkout:hover{
@@ -167,6 +198,68 @@ div.food_list_border2{
 }
 
 
+/* modal */
+.btn_cancel{
+    background-color: rgb(203, 200, 200);
+    color: #fff;
+    font-size: 16px;
+    border-radius: 10px;
+    width: 80px;
+    height: 40px;
+}
+
+.btn_cancel:hover, .btn_yes:hover{
+    background-color: #FCC106;
+    color: #403C3C;
+}
+
+.btn_yes{
+    background-color: #8B1309;
+    color: #fff;
+    font-size: 16px;
+    border-radius: 10px;
+    width: 80px;
+    height: 40px;
+}
+
+
+#copyinput{
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.btn_copy{
+    font-size: 16px;
+    background-color: #8B1309;
+    color: #fff;
+    width: 100%;
+    height: 40px;
+}
+
+/* 置頂紐 */
+#btn_back_to_top {     
+    width: 60px;     
+    height: 60px;     
+    border: none;     
+    border-radius: 50%;     
+    color: #fff;     
+    font-size: 1.75rem;     
+    background-color: #403C3C;     
+    /* box-shadow: inset -3px -3px 5px 0 black;      */
+    position: fixed;     
+    bottom: 60px;     
+    left: 40%;     
+    transition: 0.2s;    
+    margin-top: 20px;     
+    margin-left: 50%; 
+    
+    }  
+
+#btn_back_to_top:hover {     
+    background-color: grey;     
+    /* box-shadow: inset -3px -3px 5px 0 rgb(66, 66, 66);  */
+}
+
 /*已開啟揪團 start*/
 thead th:nth-child(1),
 tbody td:nth-child(1) {
@@ -175,7 +268,7 @@ tbody td:nth-child(1) {
 
 thead th:nth-child(2),
 tbody td:nth-child(2) {
-  width: 3em;
+  width: 4em;
 }
 
 thead th:nth-child(3),
@@ -187,7 +280,7 @@ thead th:nth-child(4),
 tbody td:nth-child(4),
 thead th:nth-child(5),
 tbody td:nth-child(5) {
-  width: 1em;
+  width: 0.5em;
 }
 
 .order_member_table {
@@ -198,13 +291,8 @@ tbody td:nth-child(5) {
   color: white;
   background-color: #403c3c;
   border-radius: 50px;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
   height: 2em;
   width: 8em;
-  /* font-size: large; */
-  /* font-weight: 600; */
 }
 
 .share_member_table tbody tr:nth-child(1),
@@ -212,90 +300,144 @@ tbody td:nth-child(5) {
   text-align: left;
 }
 
-.share_member_table tbody tr:nth-child(2) p {
+.dropbtn p {
   position: relative;
 }
 
-.share_member_table tbody tr:nth-child(2) p::before {
+.dropbtn p::before {
   content: "";
   position: absolute;
-  bottom: -8px;
+  bottom: -10px;
   height: 2px;
   width: 100%;
   transition: 0.3s all;
 }
 
-.share_member_table tbody tr:nth-child(2) p:hover::before {
+.dropbtn p:hover::before {
   content: "";
   background-color: lightslategrey;
 }
 
+.share_member{
+    width: 10%;
+	float: left;
+    margin-right: 8%;
+    position: fixed;
+    display: flex; 
+    justify-content:center;
+    top: 31%;
+    left: 85%;
+    transition: 0.3s;
+}
+
+
 #order_share {
-  position: fixed;
-  top: 30%;
-  margin-right: 5%;
+  position: relative;
+  bottom:10%;
+  display:flex;
 }
 
 .share_member_table {
-  position: fixed;
-  top: 40%;
-  margin-right: 5%;
+  position:relative;
 }
 
 .show_member {
   border: white solid 1px;
-  background-color: white;
-  position: fixed;
-  top: 50%;
-  right: 0%;
+  background-color: rgb(243, 238, 238);
+  position: absolute;
   text-align: center;
   width: 8em;
-  margin-right: 5.5%;
+  margin-right: 0%;
   z-index: 1;
+}
+
+#dropbtn div{
+  position: relative;
+  display: block;
 }
 
 .show_member_detail {
   padding-left: 0px;
 }
 
+
 .show_member_detail > li {
   border-bottom: #585555c5 0.5px solid;
+  font-size: 16px;
+  line-height: 1.5em;
+  align-items:baseline;
 }
 
 #checkout {
-  width: 100px;
-  height: 50px;
+  width: 8em;
+  height: 2em;
+  text-align: center;
+  font-weight: 600;
+}
+
+.rwd_icon_plus{
+  border-radius:50%;
+  border: solid 1.5px #585555c5;
+  height: 40px;
+  width: 40px;
   position: fixed;
-  bottom: 28%;
-  right: 6%;
-  align-self: center;
-  font-size: 12pt;
+  right: 0%;
+  z-index: 2;
+  background-color: white;
+  display: none;
+}
+.close_btn{
+  display: none;
+}
+
+.footer_page {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
 }
 
 
-/*已開啟揪團 end*/
 
+@media screen and (max-width:768px) {
+  #table_order{
+    width: 100%;
+  }
+  .share_member{
+    visibility: hidden;
+  }
+ /* .rwd_icon_plus{
+    display: initial;
+  } */
+  
+  .rwd_share_member_table{
+    visibility: visible;
+    position: fixed;
+    top:160px;
+    right: 0;
+    z-index: 1;
+    background-color: antiquewhite;
+    border-radius: 0;
+    display: none;
+  }
+  #order_share  img{
+    display:none;
+  }
+  .close_btn{
+    display: inline;
+    float: right;
+  }
+  }
+  /*已開啟揪團 end*/
 
-
-/* 大平板 */
-@media screen and (max-width:995px) {
-    .menu_group_list{
-        width: 13vw;
-    }    
-
-    .order_number{
-        display: none;
-    }
-
-}
 
 
 /* 平板 */
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:1000px) {
         .menu_group_list{
             width: 15vw;
-            font-size: 11pt;
+            font-size: 14pt;
         }
     
     .menu_group{
@@ -307,7 +449,9 @@ tbody td:nth-child(5) {
         margin-right: 0;
     }
     .group_button{
+        font-size: 1.5vw;
     }
+
     div.food_list_border2{
         margin-right: 0;
         margin-left: 10vw;
@@ -319,6 +463,10 @@ tbody td:nth-child(5) {
     .order_number{
         display: block;
     }
+    .btn_add_cart{
+        font-size: 16pt;
+    }
+
 
 }
 
@@ -328,7 +476,7 @@ tbody td:nth-child(5) {
 @media screen and (max-width:576px) {
     .menu_group_list{
         width: 20vw;
-        font-size: 11pt;
+        font-size: 12pt;
     }
 
     div.food_list_border{
@@ -346,10 +494,11 @@ tbody td:nth-child(5) {
     div.food_list_border2{
         margin-left: 10vw;
     }
-    .group_button{
-
-    }
     .dollar{
         font-size: 14pt;
     }
+    .btn_add_cart{
+        font-size: 16pt;
+    }
+    
 }
