--- a/index_list/css/member_register.css
+++ b/index_list/css/member_register.css
@@ -56,6 +56,11 @@
     background-color: #a30f01;
 }
 
+.register_btn a {
+    text-decoration: none;
+    color: white;
+}
+
 .footer_page {
     position: fixed;
     bottom: 0;
