--- a/index_list/css/member_login.css
+++ b/index_list/css/member_login.css
@@ -8,11 +8,10 @@
 }
 
 /* ---------- body start ---------- */
-
 .member_login_container {
     width: 440px;
-    height: 60vh;
-    margin: 120px auto;
+    height: 58vh;
+    margin: 80px auto;
     padding: 10px 10px;
     display: flex;
     flex-direction: column;
@@ -20,9 +19,11 @@
     align-items: center;
     border: 2px solid #707070;
     border-radius: 5px;
+    font-weight: bold;
 }
 
 .member_login_title {
+    /* border: 2px solid lightpink; */
     font-size: 28px;
     width: 100%;
     text-align: center;
@@ -35,9 +36,11 @@
 }
 
 .form-group > input {
+    /* border: 4px dotted blue; */
     width: 300px;
     height: 40px;
     justify-content: center;
+    text-align: center;
 }
 
 .btn_member_login {
@@ -77,10 +80,42 @@
     justify-content: space-around;
 }
 
+.forgot a{
+    text-decoration: none;
+    font-size: 16px;
+    position: relative;
+    right: 28px;
+}
+
+.forgot input {
+    position: relative;
+    left: 28px;
+}
+
+.forgot span {
+    font-size: 16px;
+    position: relative;
+    bottom: 4px;
+    left: 30px;
+}
+
 #automatically_login {
     width: 20px;
     height: 20px;
 }
+
+.reportSpan {
+    /* background-color: palegoldenrod; */
+    position: absolute;
+    top: 320px;
+    right: 453px;
+    height: 5vh;
+    color: red;
+    font-weight: bold;
+    font-size: 18px;
+    /* status */
+}
+
 
 /* ---------- body over ---------- */
 
@@ -89,8 +124,7 @@
 /* ---------- footer_page start ---------- */
 
 .footer_page {
-    position: fixed;
-    bottom: 0;
+    margin-top: 40px;
     width: 100%;
 }
 
