--- a/food-crossroads/src/css/index.css
+++ b/food-crossroads/src/css/index.css
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     max-width: 100%;
-    background-image: url("../img/index_img.jpg");
+    background-image: url("../img/index_img/index_img.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
