--- a/index_list/css/orderpage.css
+++ b/index_list/css/orderpage.css
@@ -295,6 +295,15 @@ tbody td:nth-child(5) {
   width: 8em;
 }
 
+.btn_charview{
+    color: white;
+    background-color: #8B1309;
+    border-radius: 10px;
+    height: 4em;
+    width: 8em;
+    margin-left: 20px;
+}
+
 .share_member_table tbody tr:nth-child(1),
 .share_member_table tbody tr:nth-child(2) {
   text-align: left;
@@ -391,11 +400,11 @@ tbody td:nth-child(5) {
 }
 
 .footer_page {
-  position: fixed;
   width: 100%;
   bottom: 0;
   left: 0;
 }
+
 
 
 
