--- a/index_list/css/style.css
+++ b/index_list/css/style.css
@@ -87,9 +87,10 @@ nav .nav_a {
     z-index: 6;
     background-color: #403C3C;
     color: white;
+    width: 100%;
     bottom: 0;
     left: 0;
-    position: sticky;
+    position: fixed;
 }
 
 .footer_text {
