--- a/index_list/css/shoppingchar.css
+++ b/index_list/css/shoppingchar.css
@@ -98,6 +98,11 @@ td span {
     border: none;
     color: white;
     border-radius: 5px;
+    transition: 0.3s;
+}
+
+.buy-btn:hover {
+    background-color: #a30f01;
 }
 
 #sum-row td {
